[gd_scene load_steps=10 format=2]

[ext_resource path="res://Scenes/Objects/BaseObjects/SelectableItem.tscn" type="PackedScene" id=1]
[ext_resource path="res://Scenes/Objects/BaseObjects/DecayableItem.gd" type="Script" id=2]
[ext_resource path="res://Assets/Doorway/DoorwayRoom_Plant1_Base.png" type="Texture" id=3]
[ext_resource path="res://Assets/UI/PlantDeath.png" type="Texture" id=4]

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 4 )
region = Rect2( 0, 0, 120, 48 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 4 )
region = Rect2( 120, 0, 120, 48 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 4 )
region = Rect2( 240, 0, 120, 48 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 4 )
region = Rect2( 360, 0, 120, 48 )

[sub_resource type="SpriteFrames" id=5]
animations = [ {
"frames": [ SubResource( 1 ), SubResource( 2 ), SubResource( 3 ), SubResource( 4 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[node name="DecayableItem" instance=ExtResource( 1 )]
script = ExtResource( 2 )
decay_sprite = NodePath("DecayableNodes/DecaySprite")
kill_sprite_animation = NodePath("DecayableNodes/KillSprite")

[node name="BaseSprite" parent="SelectableNodes" index="2"]
texture = ExtResource( 3 )

[node name="DecayableNodes" type="Node2D" parent="." index="1"]

[node name="DecaySprite" type="Sprite" parent="DecayableNodes" index="0"]

[node name="KillSprite" type="AnimatedSprite" parent="DecayableNodes" index="1"]
frames = SubResource( 5 )
